# hefty

./: .coderabbit.yaml  .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS  CORE_BUNDLING_MIGRATION.md  DOCKER_README.md  FS-6430A CdTe Dec2017_v640.PAN  FS-6435A CdTe Dec2017_v640.PAN  LICENSE  POST_MIGRATION_CHECKLIST.md  Procfile  README.md  amplify.yml  build-plotly-custom.js  docker-compose.yml  index.html  inspect_snapshot.py  notes.txt  package-lock.json  playwright-global-setup.ts  pull_request_template.md  pyproject.toml  renovate.json5  review.md  test_func.py  test_parse_pan.py  test_rule.yml  testing.ipynb  tsdb.md
api/: .dockerignore  .ebignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  DOCKER_BUILD.md  Dockerfile  Dockerfile.simple  README.md  core_test.ipynb  generate_openapi_spec.py  generate_ts_enums.py  openapi.json  pyproject.toml  requirements.txt
api/.cursor/rules/: aiohttp-best-practices.mdc  fastapi-socketio-best-practices.mdc  pandas-best-practices.mdc  psycopg2-binary-best-practices.mdc  pvlib-best-practices.mdc  pydantic-core-best-practices.mdc  sqlalchemy-best-practices.mdc
api/.ebextensions/: 01_fastapi.config  02_nginx_application.conf
api/.github/workflows/: auto-pr-dev-to-staging.yml
api/.platform/nginx/: nginx.conf
api/_data_insert/: utils.py
api/_data_insert/_timescale/: manual_chunk_compression.py
api/_docs/: PTP_API_STRUCTURE_EXPLANATION.md  _README_DEPLOY.md  _README_STYLE_GUIDE.md
api/_pr_checks/: deprecator.sh
api/_scripts/: auth_aws_codeartifact.sh  aws_core_wrapper.py  check_unused_routes.py  generate_env_from_parameter_store.py  generate_env_from_secrets.py  generate_openapi_spec.py  generate_pveem_env_from_parameter_store.py  generate_ts_enums.py  roll_up_capacities.py  route_tree.py  test_deployment_package.sh  update_core.sh  update_core_auto.sh  update_core_version.sh  uv_auth_wrapper.py  uv_wrapper.sh
api/_tests/: conftest.py  test_schemas.py
api/app/: dependencies.py  interfaces.py  logger.py  main.py  responses.py  settings.py  utils.py
api/app/_utils/: aws.py  (+5 more)
api/specs/: sqlalchemy.md
core/: .gitignore  .mise.toml  AGENTS.md  README.md  alembic.ini  cspell.json  package-lock.json  postcss.config.cjs  pull_request_template.md  pyproject.toml  requirements.txt
core/_alembic_migrations/: _README_ALEMBIC.md  env.py  script.py.mako  tenant.py
core/_pr_checks/: star_syntax_check.py
core/_scripts/: clean_alembic.py  publish.sh  update_releases.py  validate_enums.py
core/_tests/: fixtures.ts
core/specs/: sqlalchemy.md
core/src/: HexLoaderInline.tsx  index.css  main.tsx
core/tests/: conftest.py  test_db_query.py
forecast/: README.md  _plan.md  pyproject.toml
issues/: README.md  __init__.py  lambda_handler.py  logging_utils.py  main.py  pyproject.toml
issues/config/: __init__.py  issue_detectors.py
issues/detectors/: __init__.py  base.py  met_station_non_communicating.py  poa_sensor_out_of_position.py
issues/models/: __init__.py  detector_context.py  issue_candidate.py  persistence_models.py
issues/orchestrator/: __init__.py  context_builder.py  run_issues.py  run_project.py
issues/persistence/: __init__.py  db_repository.py  matcher.py  repository.py  run_repository.py
issues/rectification/: __init__.py  engine.py  rules.py
issues/tests/: test_context_builder.py  test_db_repository.py  test_lambda_handler.py  test_met_station_non_communicating.py  test_poa_sensor_out_of_position.py  test_rectification_rules.py  test_run_issues.py  test_run_project.py
kpi/: .gitignore  .mise.toml  ACCUMULATOR_GUIDLINES.md  AGENTS.md  Dockerfile  Dockerfile.fetcher  README.md  auth_aws_codeartifact.sh  deploy.sh  fetcher_lambda_function.py  lambda_function.py  mkdocs.yml  mkdocs_hooks.py  mypy.ini  pyproject.toml  pyrightconfig.json
kpi/_scripts/: check.sh  deploy.sh  generate_field_dependency_graph.py  generate_kpi_md.py  generate_ner_report.py  install_lambda_dependencies.sh  switch_core_source.py
kpi/cdk/: README.md  app.py  cdk.json  pyproject.toml
kpi/docs/: .nav.yml  field_dependency_dag.md  index.md
kpi/tests/: test_no_duplicate_fields.py  test_transform_arg_roundtrip.py  test_workflow_no_orphan_fields.py
microservices/calendar_notifications_lambda/: Dockerfile  README.md  calendar_notifications_lambda.py  pyproject.toml
microservices/cdk/: README.md  app.py  cdk.json  pyproject.toml
microservices/cmms-ticket-download/: .gitignore  Dockerfile  README.md  deploy.sh  docker-workspace.toml  lambda_function.py  pyproject.toml  pyrightconfig.json
microservices/data_connection_outage_notifications_lambda/: Dockerfile  data_connection_outage_notifications_lambda.py  pyproject.toml
microservices/jigsaw-analysis-lambda/: .gitignore  Dockerfile  README.md  config.py  jigsaw.py  lambda_function.py  proximal_api.py  pyproject.toml
microservices/kpi-pipeline-fetcher/: Dockerfile  README.md  deploy.sh  lambda_function.py  pyproject.toml  pyrightconfig.json
microservices/weather_alerts_lambda/: Dockerfile  README.md  pyproject.toml  weather_alerts_lambda.py
pv-eem/: .gitignore  AGENTS.md  Dockerfile  _README.md  constraint.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
pv-eem/.zed/: debug.json
pv-eem/_cdk/: README.md  app.py  project_configs.json5  pveem_stack.py
pv-eem/_scripts/: cdk_deploy.sh  check_deployed_version.py  check_pin_parity.py  compare.py  deploy.sh  detailed_memory_profile.py  install_lambda_dependencies.sh  live_test.py  plot_poa_sensors.py  push_image.sh  read_inputs.py  read_pyproject.py  step_renamer.py
pv-eem/_tests/: _README.md  conftest.py  snapshot_test_helpers.py
pv-eem/events/: app.py  events_stack.py  project_configs.json
pv-eem/src/: _README.md  interfaces.py  main.py  memray-flamegraph-main.py.34034.html
sql-admin/: README.md  admin_views.py  main.py  pyproject.toml
super-admin/inspectui/: README.md  pyproject.toml
super-admin/kpi-dep-app/: app.py  presets.json  pyproject.toml  pyrightconfig.json
super-admin/uploaded-documents/: .gitignore  README.md  pyproject.toml
(+2844 files in other folders)
