# =============================================================================
# MONOREPO ROOT CONFIGURATION
# =============================================================================
# This file contains unified linting and type checking configuration for the
# entire monorepo. Ruff is installed at the root level for consistency.

[project]
name = "mono"
version = "0.1.0"
description = "Monorepo root for unified tooling"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyarrow-stubs>=20.0.0.20250928",
    "ruff==0.14.10",
    "semgrep>=1.107.0",
    "sqlalchemy>=2.0.45",
    "vulture>=2.14",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "ANN002",  # checks that *args are typed
    "ARG001",  # checks that args are used in functions
    "ARG002",  # checks that args are used in methods
    "ASYNC",   # async python checks
    "COM",     # Ending commas
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public function
    "D103",    # Missing docstring in public method
    "D417",    # Docstring must describe parameters
    "EXE",     # Executables
    "FA",      # Future Annotations
    "F401",    # Remove unused imports
    "F541",    # f-string missing placeholders
    "F841",    # Unused variables in function scopes
    "F842",    # Unused variable annotations
    "FAST001", # FastAPI
    "FAST003", # FastAPI
    "FURB",    # Code modernization
    "I",       # isort: Sort all imports
    "INT",     # Gettext formatting
    "ISC",     # Implicit string concat
    "ICN",     # Import alias
    "PD002",   # Pandas inplace
    "PIE",     # Code simplification
    "PLC0415", # Only top level imports
    "S101",    # Look for assert
    "S102",    # Look for exec
    "S103",    # Look for os.chmod
    "S104",    # hardcoded bind all interfaces
    "S105",    # hardcoded password string
    "S106",    # hardcoded password func arg
    "S107",    # hardcoded password defaults
    "S108",    # hardcoded temp files
    "S110",    # try-except-pass
    "T",       # debugger checks
    "T20",     # Lint print and pprint Statements
    "UP",      # pyupgrade
    "S608",    # hardcoded-sql-expression
    "TID251",  # banned imports
    "E501",    # line too long
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "COM812",
    "COM819",
    "FAST002",
    "FURB162",
]
external =[]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG",  # Unused function args -> fixtures are functionally relevant
    "FBT",  # Don't care about booleans as positional arguments in tests
]
"**/_tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG",  # Unused function args -> fixtures are functionally relevant
    "FBT",  # Don't care about booleans as positional arguments in tests
]
"api/_data_insert/**/*.py" = [
    "S608", # hardcoded-sql-expression allowed in data insert scripts
    "T20",  # print statements allowed in data insert scripts
]
"api/_scripts/**/*.py" = [
    "PLC0415", # allow local imports in scripts
    "T20",     # allow print in scripts
]
"_tools/**/*.py" = [
    "T20",  # allow print in tools
]
"api/**" = [
    "TID251", # api package can import from itself
]
"api/app/_crud/projects/data.py" = [
    "S608", # hardcoded-sql-expression allowed for dynamic schema queries
]
"api/app/_crud/projects/data_raw.py" = [
    "S608", # hardcoded-sql-expression allowed for dynamic schema queries
]
"api/app/_crud/projects/data_timeseries.py" = [
    "S608", # hardcoded-sql-expression allowed for dynamic schema queries
]
"core/_scripts/*.py" = [
    "D",  # Utility scripts do not require docstrings
]
"core/_alembic_migrations/**/*.py" = [
    "ARG001",
    "D",  # Alembic migrations do not need docstrings
]
"core/src/core/**/*.py" = [
    "D",  # Skip docstring checks in the core package for now
]
"core/src/core/models.py" = [
    "D",  # Model declarations are self-describing without docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"api" = { msg = "Avoid importing from the api package outside api itself." }

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
mypy_path = "src"
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Exclude patterns for mypy
exclude = [
    "^core/.*",           # Exclude installed package in api
    "^app\\.crud\\.py$",
    "^app\\.utils\\.py$",
]

[[tool.mypy.overrides]]
module = ["_alembic_migrations.versions.*", "crud.py$"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "geoalchemy2.*",
    "_alembic_migrations.tenant",
    "alembic",
    "fastapi.*",
    "app.*",
    "natsort",
    "jwt",
    "google.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

# =============================================================================
# VULTURE CONFIGURATION
# =============================================================================
[tool.vulture]
exclude = [
    # --- CORE ---
    # --- API ---
    "*protected/deletions/delete_project*.py",
]
