[project]
name = "api"
version = "0.9.0"
description = "Main API for the Proximal Platform"
readme = "README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "boto3 >=1.38,<2",
    "clerk-backend-api>=3.3.1,<4",
    "core",
    "fastapi>=0.119.0,<0.120",
    "fastapi-mcp==0.4.0",
    "geoalchemy2 >=0.18,<0.19",
    "google-api-python-client >=2.166.0,<3",
    "googleapis-common-protos >=1.69.2,<2",
    "httpx >=0.28,<0.29",
    "natsort >=8.4.0,<9",
    "openai>=1.86.0",
    "pandas >=2.2.3,<3",
    "polars ==1.34.0", # Added strict version constraint to avoid breaking change introduced here https://github.com/pola-rs/polars/pull/24027
    "psycopg2-binary==2.9.11",
    "pvlib>=0.13,<0.14",
    "pyarrow>=20.0.0",
    "pyjwt >=2.9.0,<3",
    "python-dotenv >=1.0.1,<2",
    "requests>=2.32.4",
    "s3fs>=2025.9.0,<2026",
    "sentry-sdk >=2.17.0,<3",
    "shapely >=2.1.1,<3",
    "sqlalchemy >=2.0.44,<3",
    "timezonefinder>=6.2.0",
    "uvicorn>=0.37.0,<0.38",
    "gql[aiohttp]>=4.0.0",
    "numpy~=2.3.3",
    "scipy~=1.16.2",
    "botocore~=1.40.49",
    "pydantic~=2.12.0",
    "pytz~=2025.2",
    "greenlet~=3.2.4",
    "orjson~=3.11.3",
    "xlsxwriter~=3.2.9",
    "jinja2~=3.1.6",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.37.36",
    "botocore-stubs>=1.37.36",
    "deptry>=0.23.1",
    "ipykernel>=6.29.5",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.0",
    "tomli>=2.0.2",
    "types-psycopg2>=2.9.21.20250318",
    "types-requests>=2.31.0.6",
    "typing-extensions>=4.12.2",
]
[tool.uv.sources]
core = { path = "../core", editable = true }

[[tool.uv.index]]
name = "proximal-package-index"
url = "https://proximal-code-artifact-domain-016997484973.d.codeartifact.us-east-2.amazonaws.com/pypi/proximal-hub/simple/"
explicit = true

[tool.uv]


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Note: ruff and mypy configuration now lives in the root pyproject.toml
# to unify linting logic across the monorepo


# --- pyright ---
[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.setuptools]
packages = ["app", "_scripts"]

[tool.deptry]
extend_exclude = ["_tests/**"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "greenlet",
    "orjson",     # optional dependency used by fastapi
    "xlsxwriter", # optional dependency used by pandas
    "jinja2",     # optional dependency used by pandas
    "openpyxl",   # optional dependency used by pandas in data_insert scripts
]
