[project]
name = "api"
version = "0.11.0"
description = "Main API for the Proximal Platform"
readme = "README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "aiohttp>=3.13.3,<4",
    "boto3>=1.38,<2",
    "botocore~=1.42",
    "clerk-backend-api~=5.0",
    "core",
    "fastapi~=0.135",
    "fastapi-mcp==0.4.0",
    "geoalchemy2>=0.18,<0.19",
    "google-api-python-client>=2.166.0,<3",
    "googleapis-common-protos>=1.69.2,<2",
    "gql[aiohttp]>=4.0.0,<5",
    "greenlet~=3.3",
    "httpx>=0.28,<0.29",
    "jinja2>=3.1.6,<4",
    "kaleido>=1.2.0,<2",
    "natsort>=8.4.0,<9",
    "numpy~=2.4",
    "openai~=2.16",
    "openpyxl>=3.1.5,<4",
    "orjson~=3.11.3",
    "pandas",
    "plotly>=6.3.1,<7",
    "polars",
    "psycopg2-binary==2.9.11",
    "pvlib~=0.14",
    "pyarrow~=23.0",
    "pydantic~=2.12.0",
    "pydantic-core~=2.41.5",
    "pyjwt>=2.9.0,<3",
    "python-dotenv>=1.0.1,<2",
    "pytz~=2025.2",
    "reportlab>=4.4.6,<5",
    "requests>=2.32.4,<3",
    "s3fs~=2026.2",
    "scipy~=1.17",
    "sentry-sdk>=2.17.0,<3",
    "shapely>=2.1.1,<3",
    "sqlalchemy>=2.0.44,<3",
    "starlette~=0.51",
    "timezonefinder~=8.2",
    "uvicorn~=0.40",
    "xlsxwriter~=3.2.9",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.37.36,<2",
    "botocore-stubs>=1.37.36,<2",
    "deptry>=0.23.1,<1",
    "ipykernel>=7.1,<8",
    "pandas-stubs",
    "pillow~=12.1",
    "plotly>=6.3.1,<7",
    "pre-commit>=4.2.0,<5",
    "pytest~=9.0",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.0,<4",
    "tomli>=2.0.2,<3",
    "types-psycopg2>=2.9.21.20250318,<3",
    "types-pytz>=2026.1.1.20260408,<2027",
    "types-requests>=2.31.0.6,<3",
    "typing-extensions>=4.12.2,<5",
]
[tool.uv.sources]
core = { workspace = true }

[[tool.uv.index]]
name = "proximal-package-index"
url = """https://proximal-code-artifact-domain-016997484973.\
d.codeartifact.us-east-2.amazonaws.com/pypi/proximal-hub/simple/"""
explicit = true

[tool.uv]


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Note: ruff and mypy configuration now lives in the root pyproject.toml
# to unify linting logic across the monorepo


# --- pyright ---
[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.setuptools]
packages = ["app", "_scripts"]

[tool.deptry]
extend_exclude = ["_tests/**"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "greenlet",
    "orjson",     # optional dependency used by fastapi
    "xlsxwriter", # optional dependency used by pandas
    "openpyxl",   # optional dependency used by pandas in data_insert scripts
    "kaleido",    # optional dependency used by plotly
    "jinja2",     # optional dependency used by pandas for DataFrame rendering
]

[tool.pytest.ini_options]
testpaths = ["_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
