[project]
name = "core"
version = "0.3.144"
description = "Shared library for Proximal services"
readme = "README.md"
authors = [
    { name = "Kurt Rhee", email = "33131958+kurt-rhee@users.noreply.github.com" },
]
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "async-lru>=2.0.5,<3",
    "asyncpg>=0.30.0,<1",
    "boto3>=1.38,<2",
    "botocore~=1.42",
    "clerk-backend-api~=5.0",
    "clickhouse-connect>=0.10.0,<1",
    "geoalchemy2>=0.17.1,<1",
    "greenlet>=3.2.4,<4",
    "httpx>=0.28.1,<1",
    "jinja2>=3.1.0,<4",
    "numpy>=1.24.0,<3",
    "pandas~=2.3",
    "polars",
    "psycopg2-binary>=2.9.11,<3",
    "pyarrow~=23.0",
    "python-dateutil>=2.9.0,<3",
    "python-dotenv~=1.2.1",
    "shapely>=2.1.2,<3",
    "sqlalchemy",
]

[project.scripts]
core = "core:main"

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.16.1,<2",
    "basedpyright>=1.31.4,<2",
    "deptry>=0.23.1,<1",
    "fastapi~=0.135.1",
    "packaging~=26.0",
    "pandas-stubs>=2.3.0,<3",
    "plotly>=6.3.1,<7",
    "pytest~=9.0",
]

[tool.uv]

# Note: ruff and mypy configuration now lives in the root pyproject.toml
# to unify linting logic across the monorepo

[tool.basedpyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "off"

[tool.deptry]
extend_exclude = ["_alembic_migrations/**"]
known_first_party = ["core"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg", "greenlet", "psycopg2-binary", "pyarrow"]
DEP004 = [
    "fastapi", # optional dependency used by api callers
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
