[project]
name = "core"
version = "0.4.9"
description = "Shared library for Proximal services"
readme = "README.md"
authors = [
    { name = "Kurt Rhee", email = "33131958+kurt-rhee@users.noreply.github.com" },
]
requires-python = ">=3.12.8,<3.13"
# Publish-time artifacts inject the root-managed version pins for these deps.
dependencies = [
    "async-lru",
    "asyncpg",
    "boto3",
    "botocore",
    "clerk-backend-api",
    "clickhouse-connect",
    "geoalchemy2",
    "greenlet",
    "httpx",
    "jinja2",
    "numpy",
    "pandas",
    "polars",
    "psycopg2-binary",
    "pyarrow",
    "python-dateutil",
    "python-dotenv",
    "shapely",
    "sqlalchemy",
]

[project.scripts]
core = "core:core_main"

[build-system]
requires = ["uv_build~=0.11.3"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.16.1,<2",
    "basedpyright>=1.31.4,<2",
    "deptry>=0.23.1,<1",
    "fastapi~=0.135.1",
    "packaging~=26.0",
    "pandas-stubs",
    "plotly>=6.3.1,<7",
    "pytest~=9.0",
]

[tool.uv]

# Note: ruff and mypy configuration now lives in the root pyproject.toml
# to unify linting logic across the monorepo

[tool.basedpyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "off"

[tool.deptry]
extend_exclude = ["_alembic_migrations/**"]
known_first_party = ["core"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg", "greenlet", "psycopg2-binary", "pyarrow"]
DEP004 = [
    "fastapi", # optional dependency used by api callers
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
