[project]
name = "forecast"
version = "0.1.0"
description = "PV forecast service"
readme = "README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "core",
    "hefty",
]

[tool.uv]
package = false

[tool.uv.sources]
core = { workspace = true }
hefty = { path = "../third-party/hefty", editable = true }
