[project]
name = "issues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "core",
    "geoalchemy2>=0.18,<0.19",
    "psycopg2-binary>=2.9.11,<3",
    "sqlalchemy>=2.0.45,<3",
]

[tool.uv.sources]
core = { workspace = true }
