[project]
name = "issues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "boto3",
    "botocore",
    "core",
    "geoalchemy2",
    "psycopg2-binary",
    "pvlib~=0.14",
    "sqlalchemy",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "issues" = "." }
packages = [
    "issues",
    "issues.config",
    "issues.detectors",
    "issues.models",
    "issues.orchestrator",
    "issues.persistence",
    "issues.rectification",
]

[tool.uv.sources]
core = { workspace = true }
