[project]
name = "kpi-pipeline"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "David Kyle", email = "dkpollster@gmail.com" }]
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "bottleneck~=1.6",
    "core",
    "flox~=0.10",
    "greenlet~=3.3",
    "pandas~=2.3",
    "psycopg2-binary~=2.9",
    "pvlib~=0.13",
    "pyarrow~=20.0",
    "pydantic~=2.11",
    "sentry-sdk~=2.0",
    "shapely~=2.0",
    "xarray~=2026.2",
]

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[tool.uv_build.build.targets.wheel]
packages = ["src/kpi_pipeline"]

[dependency-groups]
dev = [
    "h5netcdf~=1.8.0",
    "ipykernel~=7.2.0",
    "jupyter~=1.1.0",
    "matplotlib~=3.10.0",
    "memory_profiler~=0.61.0",
    "mypy~=1.19.0",
    "netcdf4~=1.7.0",
    "notebook~=7.5.0",
    "pandas-stubs==3.0.0.260204",
    "plotly~=6.5.0",
    "poethepoet~=0.41.0",
    "types-psycopg2==2.9.21.20251012",
]

[[tool.uv.index]]
name = "proximal-package-index"
url = "https://proximal-code-artifact-domain-016997484973.d.codeartifact.us-east-2.amazonaws.com/pypi/proximal-hub/simple/"

[tool.uv.sources]
core = { path = "../core", editable = true }


# --- POE TASKS ---
# Shell typoe tasks

[tool.poe.tasks]
# Release
freeze = "uv export --frozen --no-emit-workspace --no-dev --no-editable -o requirements.txt --no-hashes --quiet"
_add = "git add ."
_commit = "git commit -m 'Release'"
_push = "git push"
_tag = { "shell" = """
    VERSION=$(python -c "import tomli; print(tomli.load(open('pyproject.toml', 'rb'))['project']['version'])")
    git tag "v$VERSION"
    git push origin "v$VERSION"
    """ }

[tool.poe.tasks.uv]
cmd = "./_scripts/uv_wrapper.sh"
executor = { type = "simple" }

[tool.poe.tasks.release]
sequence = ["freeze", "bump", "_add", "_commit", "_push", "_tag"]

[[tool.poe.tasks.release.args]]
name = "level"
help = "version level to bump (patch, minor, major)"
positional = true

[tool.poe.tasks.bump]
shell = "uv version --bump ${level:-patch}"
help = "Bump version level (patch, minor, major)"

[[tool.poe.tasks.bump.args]]
name = "level"
help = "version level to bump (patch, minor, major)"
positional = true

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
