[project]
name = "kpi"
version = "0.1.2"
description = "Add your description here"
authors = [{ name = "David Kyle", email = "dkpollster@gmail.com" }]
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "asyncpg~=0.30",
    "bottleneck~=1.6",
    "core",
    "flox~=0.10",
    "greenlet~=3.3",
    "numpy~=2.4",
    "pandas~=3.0",
    "polars~=1.39",
    "psycopg2-binary~=2.9",
    "pvlib~=0.13",
    "pyarrow~=23.0",
    "pydantic~=2.11",
    "python-dotenv~=1.2.1",
    "requests>=2.33.1,<3",
    "sentry-sdk~=2.58",
    "shapely~=2.0",
    "sqlalchemy~=2.0.41",
    "xarray~=2026.2",
]

[build-system]
requires = ["uv_build~=0.11.3"]
build-backend = "uv_build"

[tool.uv_build.build.targets.wheel]
packages = ["src/kpi"]

[dependency-groups]
dev = [
    "deptry~=0.25",
    "h5netcdf~=1.8.0",
    "ipykernel~=7.2.0",
    "jupyter~=1.1.0",
    "matplotlib~=3.10.0",
    "memory_profiler~=0.61.0",
    "mypy~=1.20.0",
    "netcdf4~=1.7.0",
    "notebook~=7.5.0",
    "pandas-stubs~=3.0",
    "plotly~=6.6.0",
    "pytest~=9.0",
    "types-psycopg2==2.9.21.20260223",
    "types-requests>=2.33.0.20260408",
    "vulture>=2.16,<3",
]

[[tool.uv.index]]
name = "proximal-package-index"
url = "https://proximal-code-artifact-domain-016997484973.d.codeartifact.us-east-2.amazonaws.com/pypi/proximal-hub/simple/"
explicit = true

[tool.uv.sources]
core = { path = "../core", editable = true }


# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

# =============================================================================
# BASEDPYRIGHT CONFIGURATION
# =============================================================================

[tool.basedpyright]
typeCheckingMode = "off"
extraPaths = ["../core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.deptry]
known_first_party = ["kpi"]
per_rule_ignores = { DEP002 = ["bottleneck", "flox", "greenlet", "pyarrow"] }
