[project]
name = "kpi"
version = "0.1.2"
description = "Add your description here"
authors = [{ name = "David Kyle", email = "dkpollster@gmail.com" }]
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "asyncpg",
    "boto3",
    "bottleneck~=1.6",
    "core",
    "flox~=0.10",
    "greenlet",
    "griffe>=1,<3",
    "mkdocstrings-python>=2.0.0,<3",
    "numpy",
    "pandas",
    "polars",
    "psycopg2-binary",
    "pvlib~=0.13",
    "pyarrow",
    "pydantic~=2.11",
    "python-dotenv",
    "requests>=2.33.1,<3",
    "sentry-sdk~=2.58",
    "shapely",
    "sqlalchemy",
    "xarray~=2026.2",
]

[build-system]
requires = ["uv_build~=0.11.3"]
build-backend = "uv_build"

[tool.uv_build.build.targets.wheel]
packages = ["src/kpi"]

[dependency-groups]
dev = [
    "boto3-stubs",
    "deptry~=0.25",
    "h5netcdf~=1.8.0",
    "ipykernel~=7.2.0",
    "jupyter~=1.1.0",
    "matplotlib~=3.10.0",
    "memory_profiler~=0.61.0",
    "mkdocs>=1.6.1,<2",
    "mkdocs-awesome-nav>=3.0,<4",
    "mkdocs-material>=9.7.6,<10",
    "mkdocstrings>=1.0.4,<2",
    "mypy~=1.20.0",
    "netcdf4~=1.7.0",
    "notebook~=7.5.0",
    "pandas-stubs~=3.0",
    "plotly~=6.6.0",
    "pytest~=9.0",
    "types-psycopg2>=2.9.21.20260408,<3",
    "types-requests>=2.33.0.20260408",
    "vulture>=2.16,<3",
]

[tool.uv.sources]
core = { workspace = true }


# =============================================================================
# MYPY CONFIGURATION
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

# =============================================================================
# BASEDPYRIGHT CONFIGURATION
# =============================================================================

[tool.basedpyright]
typeCheckingMode = "off"
extraPaths = ["../core/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.deptry]
known_first_party = ["kpi"]
per_rule_ignores = { DEP002 = ["bottleneck", "flox", "greenlet", "pyarrow"] }
