[project]
name = "pv-expected-energy"
version = "0.17.2"
description = "PV Expected Energy Model for Proximal Energy"
readme = "_README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "boto3~=1.41", # for reading pyproject.toml version
    "core",
    "polars", # for database read interactions (faster than pandas)
    "psycopg2-binary~=2.9.10", # used under the hood by sqlalchemy
    "pvlib~=0.15", # main performance modeling library
    "pyarrow~=23.0", # needed for polars database connection
    "python-dotenv~=1.2", # environment variables
    "s3fs~=2026.2", # needed for s3 connection
    "sentry-sdk~=2.52",
    "solarfactors~=1.6",
    "sqlalchemy", # for database interactions
    "tomli>=2.0.1,<3", # needed to read version from pyproject.toml
]

[dependency-groups]
dev = [ # for debugging
    "aws-cdk-lib~=2.237",
    "connectorx~=0.4.0", # shortcut for database access
    "dill~=0.4.0",
    "geopandas~=1.1", # commissioning maps to GCR's
    "ipykernel~=7.2", # for reading electrical diagrams
    "json5~=0.12", # for reading project_configs.json5 in CDK code
    "matplotlib~=3.10.5",
    "memray~=1.19",
    "pandas-stubs~=2.3.3",
    "plotly~=6.5", # graphing test results
    "pymupdf~=1.26", # for verification plots
    "pytest~=9.0", # for testing
]

[tool.uv.sources]
core = { workspace = true }

[[tool.uv.index]]
name = "proximal-package-index"
url = """https://proximal-code-artifact-domain-016997484973.\
d.codeartifact.us-east-2.amazonaws.com/pypi/proximal-hub/simple/"""
explicit = true

# REMOVE ALL DEPENDENCIES FROM SOLARFACTORS
# (removes dep on matplotlib which needs gcc to compile)
[[tool.uv.dependency-metadata]]
name = "solarfactors"
requires-dist = ["shapely~=2.1"]

[tool.pytest.ini_options]
log_level = "WARNING"
python_files = ["test_*.py", "*_test.py"]
python_functions = "test*"
pythonpath = "src"


[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "_tests"]
exclude = ["**/__pycache__", "**/.venv"]
pythonVersion = "3.12"
extraPaths = ["src"]
executionEnvironments = [{ root = ".", pythonVersion = "3.12" }]
